cmake_minimum_required (VERSION 2.8)
set(CMAKE_CXX_COMPILER_ID Clang)
set(CMAKE_C_COMPILER_ID Clang)
add_definitions("-D__STDC_LIMIT_MACROS")
add_definitions("-D__STDC_CONSTANT_MACROS")
SET (CMAKE_CXX_FLAGS_INIT "-Wall -Wno-deprecated -Wno-unused -fpermissive -Wno-write-strings")
project (mp2 CXX)
aux_source_directory(cool-support/include COOL_SUPPORT_INCLUDE)
aux_source_directory(cool-support/src COOL_SUPPORT_SRC)
aux_source_directory(src CGEN_SRC)
include_directories(cool-support/include src)
list(REMOVE_ITEM COOL_SUPPORT_SRC cool-support/src/symtab_example.cc)
add_library(cgen-1.o OBJECT ${COOL_SUPPORT_INCLUDE} ${CGEN_SRC})
add_executable(cgen-1 $<TARGET_OBJECTS:cgen-1.o> ${COOL_SUPPORT_SRC})

